# cognitive_robot_abstract_machine

./: .gitignore  AGENTS.md  README.md  docs_index.md  pycram_actions_architecture.md.resolved  pycram_giskard_pipeline.md.resolved  pyproject.toml  pytest.ini  requirements.txt  test_urdf_parser.py
giskardpy/: README.md  executor.py  pyproject.toml  requirements.txt  symbol_manager.py  user_interface.py
giskardpy/data_types/: exceptions.py
giskardpy/model/: bpb_wrapper.py  collision_detector.py  collision_world_syncer.py  joints.py  trajectory.py  world.py
giskardpy/motion_statechart/: exceptions.py  graph_node.py  motion_statechart.py  motion_statechart_manager.py
giskardpy/motion_statechart/goals/: align_to_push_door.py  base_traj_follower.py  cartesian_goals.py  collision_avoidance.py  open_close.py  pre_push_door.py  tracebot.py
giskardpy/motion_statechart/monitors/: cartesian_monitors.py  feature_monitors.py  joint_monitors.py  monitors.py  overwrite_state_monitors.py
giskardpy/motion_statechart/plotters/: graphviz.py  plot_specs.py
giskardpy/motion_statechart/tasks/: align_planes.py  cartesian_tasks.py  diff_drive_goals.py  feature_functions.py  goals_tests.py  grasp_bar.py  joint_tasks.py  mixing.py  pointing.py  task.py  weight_scaling_goals.py  wiggle_insert.py
giskardpy/qp/: constraint_collection.py  exceptions.py  qp_controller.py  qp_controller_config.py
giskardpy/qp/adapters/: qp_adapter.py  two_sided_neq_adapter.py
giskardpy/qp/solvers/: qp_solver_gurobi.py  qp_solver_qpSWIFT.py  qp_solver_qpalm.py
giskardpy/scripts/ros2-tools/: collision_matrix_tool.py
giskardpy/src/giskardpy/middleware/ros2/: giskard.py  python_interface.py
giskardpy/src/giskardpy/model/: bpb_wrapper.py  collision_matrix_manager.py
giskardpy/src/giskardpy/motion_statechart/: context.py  exceptions.py  graph_node.py  motion_statechart.py  ros_context.py
giskardpy/src/giskardpy/motion_statechart/goals/: cartesian_goals.py  templates.py
giskardpy/src/giskardpy/motion_statechart/plotters/: gantt_chart_plotter.py  plot_specs.py
giskardpy/src/giskardpy/motion_statechart/ros2_nodes/: ros_tasks.py
giskardpy/src/giskardpy/motion_statechart/tasks/: cartesian_tasks.py  feature_functions.py  weight_scaling_goals.py
giskardpy/src/giskardpy/qp/: constraint.py  constraint_collection.py  dof_limits.py  enforcement_strategy.py  exceptions.py  qp_data_symbolic.py  qp_debugger.py
giskardpy/src/giskardpy/qp/adapters/: qp_adapter.py
giskardpy/src/giskardpy/tree/behaviors/: publish_feedback.py  publish_joint_states.py  tf_publisher.py  world_updater.py
giskardpy/src/giskardpy/tree/branches/: update_world.py
giskardpy/utils/: math.py
krrood/: README.md  pyproject.toml
krrood/doc/: _toc.yml
krrood/doc/eql/: domain_mapping.md  result_processors.md
krrood/doc/eql/developer/: inference_explanation.md
krrood/doc/eql/user/: inference_explanation.md  mapped_variable.md  underspecified.md
krrood/src/krrood/: __init__.py  exceptions.py  inheritance_path_length.py  utils.py
krrood/src/krrood/adapters/: exceptions.py  json_serializer.py
krrood/src/krrood/class_diagrams/: attribute_introspector.py  class_diagram.py  exceptions.py  utils.py  wrapped_field.py
krrood/src/krrood/entity_query_language/: _monitoring.py  _stack.py  backends.py  entity.py  enums.py  exceptions.py  failures.py  match.py  predicate.py  query_graph.py  rxnode.py  symbolic.py  utils.py
krrood/src/krrood/entity_query_language/core/: mapped_variable.py
krrood/src/krrood/entity_query_language/explanation/: explanation.py
krrood/src/krrood/entity_query_language/orm/: model.py
krrood/src/krrood/entity_query_language/query/: quantifiers.py
krrood/src/krrood/ormatic/: alternative_mappings.py  custom_types.py  dao.py  eql_interface.py  exceptions.py  ormatic.py  type_dict.py  wrapped_table.py
krrood/src/krrood/parametrization/: exceptions.py  model_registries.py  parameterizer.py
krrood/src/krrood/parametrization/feature_extraction/: aggregations.py  feature_extractor.py
krrood/src/krrood/patterns/: subclass_safe_generic.py
krrood/src/krrood/probabilistic_knowledge/: parameterizer.py
krrood/src/krrood/ripple_down_rules/: exceptions.py
krrood/src/krrood/rustworkx_utils/: graph_visualizer.py  rxnode.py
krrood/src/krrood/symbolic_math/: exceptions.py  symbolic_math.py
multiverse_simulators/: MANIFEST.in  README.md  pyproject.toml
multiverse_simulators/src/mujoco_connector/: __init__.py
multiverse_simulators/src/mujoco_connector/src/mujoco_connector/: __init__.py  mujoco_connector.py  utills.py
multiverse_simulators/src/multiverse_simulator/: __init__.py  multiverse_simulator.py
physics_simulators/: pyproject.toml
physics_simulators/src/physics_simulators/: base_simulator.py  mujoco_simulator.py
probabilistic_model/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
probabilistic_model/doc/: intro.md  nyga_distribution.md  probability_theory.md  queries.md
probabilistic_model/src/probabilistic_model/: exceptions.py  utils.py
probabilistic_model/src/probabilistic_model/distributions/: uniform.py
probabilistic_model/src/probabilistic_model/learning/jpt/: jpt.py
probabilistic_model/src/probabilistic_model/probabilistic_circuit/causal/: exceptions.py
probabilistic_model/src/probabilistic_model/probabilistic_circuit/relational/: exceptions.py  rspn.py
probabilistic_model/src/probabilistic_model/probabilistic_circuit/rx/: probabilistic_circuit.py
random_events/: README.md  pyproject.toml  setup.py
random_events/benchmarks/: benchmark_gcs_apartment.py  benchmark_performance.py  profile_product_algebra.py
random_events/doc/: conceptual_guide.md  intro.md
random_events/src/random_events/: product_algebra.py  set.py  sigma_algebra.py
random_events/src/random_events_lib/export/: bindings.cpp
random_events/src/random_events_lib/random_events_lib/include/: interval.h  sigma_algebra.h
random_events/src/random_events_lib/random_events_lib/src/: product_algebra.cpp  sigma_algebra.cpp
robokudo/: README.md  pyproject.toml  requirements.txt
(+431 files in other folders)
