[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-robot-abstract-machine"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
description = "Meta-package that wires local subprojects together"
readme = "README.md"
authors = [{ name = "AICOR Institute", email = "you@example.com" }]

# Add dependencies on all workspace members by their distribution names
# uv will resolve these to editable installs via [tool.uv.sources]
dependencies = [
  "pycram-robotics",
  "giskardpy",
  "semantic_digital_twin",
  "krrood",
  "random-events",
  "probabilistic_model",
  "multiverse_simulators"
]

[tool.uv.workspace]
members = [
  "pycram",
  "giskardpy",
  "semantic_digital_twin",
  "krrood",
  "random_events",
  "probabilistic_model",
  "multiverse_simulators"
]

[tool.uv.sources]
pycram-robotics       = { workspace = true }
giskardpy             = { workspace = true }
semantic_digital_twin = { workspace = true }
krrood                = { workspace = true }
probabilistic_model   = { workspace = true }
random_events         = { workspace = true }
multiverse_simulators = { workspace = true }

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
pycram-robotics = { path = "pycram", develop = true }
giskardpy = { path = "giskardpy", develop = true }
semantic_digital_twin = { path = "semantic_digital_twin", develop = true }
krrood = { path = "krrood", develop = true }
random_events = { path = "random_events", develop = true }
probabilistic_model = { path = "probabilistic_model", develop = true }
multiverse_simulators = { path = "multiverse_simulators", develop = true }

[tool.setuptools]
packages = []