[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "random_events"
dynamic=["version", "dependencies"]
description = "Random random events for probabilistic reasoning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
authors = [
    {name = "Tom Schierenbeck", email = "tom_sch@uni-bremen.de"}
]
keywords = [
    "random events",
    "probabilistic machine learning",
    "probability theory",
    "variables",
    "reasoning under uncertainty"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Source" = "https://github.com/cram2/cognitive_robot_abstract_machine"
"Bug Tracker" = "https://github.com/cram2/cognitive_robot_abstract_machine/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["random_events*"]

[tool.pybind11]
include-dirs = ["src/random_events_lib/random_events_lib/include"]

[tool.setuptools.dynamic]
version = {attr = "random_events.__version__"}
dependencies = {file = "requirements.txt"}
